首页右侧功能开发

--- a/src/main/webapp/WEB-INF/pages/lab/index_right.html
+++ b/src/main/webapp/WEB-INF/pages/lab/index_right.html
@@ -197,8 +197,8 @@
                 <div class="total_top_4">
                     <div class="echarts_title">能力状态</div>
                     <div id="myChart3"></div>
-                    <div class="echarts_line">
-                        <span>应具备数</span></br><span>380</span>
+                    <div class="echarts_line"  style="top:41.5%">
+                        <span>应具备数</span></br><span id="ability_all_num">0</span>
                     </div>
 
                 </div>
